# AutoPatcher-Mt2

./: CMakeLists.txt  CMakeSettings.json  README.md  app.manifest  app.rc  compiler_command.txt  generate_manifest.cpp  launcher-preview.html  launcher.ini  manifest.json  version.json
include/: comparator.hpp  file_ops.hpp  http_client.hpp  launcher.hpp  manifest.hpp  patcher.hpp  ui.hpp  version.hpp
src/: comparator.cpp  file_ops.cpp  http_client.cpp  launcher.cpp  main.cpp  manifest.cpp  patcher.cpp  ui.cpp  version.cpp
